src/ASTFiles/Project.java
/* Project.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. Project.java */
import java.util.regex.*;
import java.util.ArrayList;

public class Project/*@bgen(jjtree)*/implements ProjectTreeConstants, ProjectConstants {/*@bgen(jjtree)*/
  protected static JJTProjectState jjtree = new JJTProjectState();public static int MAX_ERRORS = 10;

    public static ArrayList<ParseException> errors;
    public static void main(String args[]) throws ParseException {
        Project myCalc = new Project(System.in);
        myCalc.errors = new ArrayList<ParseException>();
        try {
            SimpleNode root = myCalc.Program(); // devolve referência para o nó raizda árvore
            if(myCalc.errors.size() != 0) {
                for(int i = 0; i < myCalc.errors.size(); ){
                    System.out.println("Unexpected symbol \u005c"" + myCalc.errors.get(i).currentToken.image + "\u005c" occurred after"
                        + " Line:" + myCalc.errors.get(i).currentToken.endLine
                        + ", Column:" + myCalc.errors.get(i).currentToken.endColumn);
                        i++;
                        if(i >= MAX_ERRORS){
                            int remErrors = (myCalc.errors.size()-i);
                            if(remErrors == 1)
                                System.out.println("There is " + remErrors + " more error.");
                            else if(remErrors == 0)
                                break;
                            else
                                System.out.println("There are " + remErrors + " more errors.");
                            break;
                        }
                }
            } else
                root.dump("");// imprime no ecrã a árvore
        } catch (ParseException e) {
            System.out.println("Unhandled Exception at line " + e.currentToken.beginLine + " and column " + e.currentToken.beginColumn);
            System.out.println("\u005cn\u005cn" + e);
        }


    }

// UTILS - START
  static final public void Empty() throws ParseException {

  }

  static final public void IntegerLiteral() throws ParseException {/*@bgen(jjtree) IntegerLiteral */
                        ASTIntegerLiteral jjtn000 = new ASTIntegerLiteral(JJTINTEGERLITERAL);
                        boolean jjtc000 = true;
                        jjtree.openNodeScope(jjtn000);Token t, z;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OCTAL:{
        t = jj_consume_token(OCTAL);
jjtree.closeNodeScope(jjtn000, true);
               jjtc000 = false;
jjtn000.setName(t.image);
        break;
        }
      case BINARY:{
        t = jj_consume_token(BINARY);
jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
jjtn000.setName(t.image);
        break;
        }
      case HEX:{
        t = jj_consume_token(HEX);
jjtree.closeNodeScope(jjtn000, true);
               jjtc000 = false;
jjtn000.setName(t.image);
        break;
        }
      case DECIMAL:{
        t = jj_consume_token(DECIMAL);
jjtree.closeNodeScope(jjtn000, true);
                   jjtc000 = false;
jjtn000.setName(t.image);
        break;
        }
      case SUB:{
        t = jj_consume_token(SUB);
        z = jj_consume_token(DECIMAL);
jjtree.closeNodeScope(jjtn000, true);
                            jjtc000 = false;
jjtn000.setName(t.image + z.image);
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Identifier() throws ParseException {/*@bgen(jjtree) Identifier */
                   ASTIdentifier jjtn000 = new ASTIdentifier(JJTIDENTIFIER);
                   boolean jjtc000 = true;
                   jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(IDENTIFIER);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
jjtn000.setName(t.image);
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

// UTILS - END



// PROGRAM/CLASS DECLARATION - START
  static final public SimpleNode Program() throws ParseException {/*@bgen(jjtree) Program */
  ASTProgram jjtn000 = new ASTProgram(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      ClassDeclaration();
jjtree.closeNodeScope(jjtn000, true);
                          jjtc000 = false;
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void ClassDeclaration() throws ParseException {/*@bgen(jjtree) ClassDeclaration */
                          ASTClassDeclaration jjtn000 = new ASTClassDeclaration(JJTCLASSDECLARATION);
                          boolean jjtc000 = true;
                          jjtree.openNodeScope(jjtn000);Token t;
    try {
      jj_consume_token(CLASS);
      t = jj_consume_token(IDENTIFIER);
jjtn000.setName(t.image);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EXTENDS:{
        jj_consume_token(EXTENDS);
        t = jj_consume_token(IDENTIFIER);
jjtn000.setExtends(t.image);
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        ;
      }
      jj_consume_token(OPENBRACK);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INT:
        case BOOLEAN:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          break label_1;
        }
        VarDeclaration();
      }
      MainMethodDeclaration();
      jj_consume_token(CLOSEBRACK);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

// PROGRAM/CLASS DECLARATION - END



// VAR DECLARATION - START
  static final public void VarDeclaration() throws ParseException {/*@bgen(jjtree) VarDeclaration */
                       ASTVarDeclaration jjtn000 = new ASTVarDeclaration(JJTVARDECLARATION);
                       boolean jjtc000 = true;
                       jjtree.openNodeScope(jjtn000);Token t;
    try {
      Type();
      t = jj_consume_token(IDENTIFIER);
jjtn000.setName(t.image);
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void VarDeclarationWoIdent() throws ParseException {/*@bgen(jjtree) VarDeclarationWoIdent */
                              ASTVarDeclarationWoIdent jjtn000 = new ASTVarDeclarationWoIdent(JJTVARDECLARATIONWOIDENT);
                              boolean jjtc000 = true;
                              jjtree.openNodeScope(jjtn000);Token t;
    try {
      TypeWoIdent();
      t = jj_consume_token(IDENTIFIER);
jjtn000.setName(t.image);
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

// VAR DECLARATION - END



// MAIN/METHOD - START
  static final public void MainMethodDeclaration() throws ParseException {
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PUBLIC:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      jj_consume_token(PUBLIC);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case STATIC:{
        MainDeclaration();
        break;
        }
      case INT:
      case BOOLEAN:
      case IDENTIFIER:{
        MethodDeclaration();
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void MainDeclaration() throws ParseException {/*@bgen(jjtree) MainDeclaration */
                        ASTMainDeclaration jjtn000 = new ASTMainDeclaration(JJTMAINDECLARATION);
                        boolean jjtc000 = true;
                        jjtree.openNodeScope(jjtn000);Token t;
    try {
      jj_consume_token(STATIC);
      jj_consume_token(VOID);
      jj_consume_token(MAIN);
      jj_consume_token(OPENPAR);
      jj_consume_token(STRING);
      jj_consume_token(OPENSQBRACK);
      jj_consume_token(CLOSESQBRACK);
      t = jj_consume_token(IDENTIFIER);
jjtn000.setName(t.image);
      jj_consume_token(CLOSEPAR);
      jj_consume_token(OPENBRACK);
      MainMethodBody();
      jj_consume_token(CLOSEBRACK);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void MethodDeclaration() throws ParseException {/*@bgen(jjtree) MethodDeclaration */
                          ASTMethodDeclaration jjtn000 = new ASTMethodDeclaration(JJTMETHODDECLARATION);
                          boolean jjtc000 = true;
                          jjtree.openNodeScope(jjtn000);Token t;
    try {
      Type();
      t = jj_consume_token(IDENTIFIER);
jjtn000.setName(t.image);
      jj_consume_token(OPENPAR);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case BOOLEAN:
      case IDENTIFIER:{
        Type();
        t = jj_consume_token(IDENTIFIER);
jjtn000.pushArg(t.image);
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case COMA:{
            ;
            break;
            }
          default:
            jj_la1[5] = jj_gen;
            break label_3;
          }
          jj_consume_token(COMA);
          Type();
          t = jj_consume_token(IDENTIFIER);
jjtn000.pushArg(t.image);
        }
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      jj_consume_token(CLOSEPAR);
      jj_consume_token(OPENBRACK);
      MainMethodBody();
      jj_consume_token(RETURN);
      Expression();
      jj_consume_token(SEMICOLON);
      jj_consume_token(CLOSEBRACK);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void MainMethodBody() throws ParseException {
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case THIS:
      case NEW:
      case FALSE:
      case TRUE:
      case NOT:
      case SUB:
      case WHILE:
      case IF:
      case OPENPAR:
      case OPENBRACK:
      case INT:
      case BOOLEAN:
      case OCTAL:
      case BINARY:
      case HEX:
      case DECIMAL:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
      InMethod();
    }
  }

  static final public void InMethod() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:
    case BOOLEAN:{
      VarDeclarationWoIdent();
      break;
      }
    case THIS:
    case NEW:
    case FALSE:
    case TRUE:
    case NOT:
    case SUB:
    case WHILE:
    case IF:
    case OPENPAR:
    case OPENBRACK:
    case OCTAL:
    case BINARY:
    case HEX:
    case DECIMAL:
    case IDENTIFIER:{
      Statement();
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// MAIN/METHOD - END



// TYPE - START
  static final public void Type() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:{
      jj_consume_token(INT);
      TypeAux();
      break;
      }
    case BOOLEAN:{
      jj_consume_token(BOOLEAN);
      break;
      }
    case IDENTIFIER:{
      jj_consume_token(IDENTIFIER);
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void TypeAux() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case OPENSQBRACK:{
      jj_consume_token(OPENSQBRACK);
ASTIsArray jjtn001 = new ASTIsArray(JJTISARRAY);
                     boolean jjtc001 = true;
                     jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(CLOSESQBRACK);
      } finally {
if (jjtc001) {
                       jjtree.closeNodeScope(jjtn001, true);
                     }
      }
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      ;
    }
  }

  static final public void TypeWoIdent() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:{
      jj_consume_token(INT);
      TypeAux();
      break;
      }
    case BOOLEAN:{
      jj_consume_token(BOOLEAN);
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// TYPE - END



// STATEMENT - START
  static final public void Statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case OPENBRACK:{
      jj_consume_token(OPENBRACK);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case THIS:
        case NEW:
        case FALSE:
        case TRUE:
        case NOT:
        case SUB:
        case WHILE:
        case IF:
        case OPENPAR:
        case OPENBRACK:
        case OCTAL:
        case BINARY:
        case HEX:
        case DECIMAL:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[12] = jj_gen;
          break label_5;
        }
        Statement();
      }
      jj_consume_token(CLOSEBRACK);
      break;
      }
    case IF:{
ASTIfElseStatement jjtn001 = new ASTIfElseStatement(JJTIFELSESTATEMENT);
        boolean jjtc001 = true;
        jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(IF);
        jj_consume_token(OPENPAR);
        Expression();
        jj_consume_token(CLOSEPAR);
      } catch (Throwable jjte001) {
if (jjtc001) {
          jjtree.clearNodeScope(jjtn001);
          jjtc001 = false;
        } else {
          jjtree.popNode();
        }
        if (jjte001 instanceof RuntimeException) {
          {if (true) throw (RuntimeException)jjte001;}
        }
        if (jjte001 instanceof ParseException) {
          {if (true) throw (ParseException)jjte001;}
        }
        {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
          jjtree.closeNodeScope(jjtn001, true);
        }
      }
      Statement();
      jj_consume_token(ELSE);
      Statement();
      break;
      }
    case WHILE:{
ASTWhileStatement jjtn002 = new ASTWhileStatement(JJTWHILESTATEMENT);
        boolean jjtc002 = true;
        jjtree.openNodeScope(jjtn002);
      try {
        jj_consume_token(WHILE);
        jj_consume_token(OPENPAR);
        try {
          Expression();
          jj_consume_token(CLOSEPAR);
        } catch (ParseException e) {
errors.add(e);
        Token next_token = getToken(1);
        /*
        CLOSEPAR: when there's an error inside Expression() but there is the close parentesis
        OPENBRACK: when there's an error in the expression but the close parentesis aren't there
        CLOSEBRACK: when there's an error in the expression and there aren't parentesis or the open bracket
        EOF: when the user starts the while expression but compiles before finishing it
        SEMICOLON: when there's an error and there aren't parentesis and the expression doesn't have brackets
        */
        while(next_token.kind != CLOSEPAR
                && next_token.kind != OPENBRACK
                && next_token.kind != CLOSEBRACK
                && next_token.kind != EOF
                && next_token.kind != SEMICOLON) {
            getNextToken();
            next_token = getToken(1);
        }
        if(next_token.kind == CLOSEPAR || next_token.kind == SEMICOLON) {
            getNextToken();
        }
        if(next_token.kind == EOF || next_token.kind == SEMICOLON) {
            {if ("" != null) return;}
        }
        }
      } catch (Throwable jjte002) {
if (jjtc002) {
          jjtree.clearNodeScope(jjtn002);
          jjtc002 = false;
        } else {
          jjtree.popNode();
        }
        if (jjte002 instanceof RuntimeException) {
          {if (true) throw (RuntimeException)jjte002;}
        }
        if (jjte002 instanceof ParseException) {
          {if (true) throw (ParseException)jjte002;}
        }
        {if (true) throw (Error)jjte002;}
      } finally {
if (jjtc002) {
          jjtree.closeNodeScope(jjtn002, true);
        }
      }
      Statement();
      break;
      }
    case THIS:
    case NEW:
    case FALSE:
    case TRUE:
    case NOT:
    case SUB:
    case OPENPAR:
    case OCTAL:
    case BINARY:
    case HEX:
    case DECIMAL:{
      ExpressionWoIdent();
      jj_consume_token(SEMICOLON);
      break;
      }
    case IDENTIFIER:{
      Identifier();
      StatementAux2();
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void StatementAux1() throws ParseException {/*@bgen(jjtree) StatementAux1 */
                      ASTStatementAux1 jjtn000 = new ASTStatementAux1(JJTSTATEMENTAUX1);
                      boolean jjtc000 = true;
                      jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(EQUAL);
jjtn000.setOperation(t.image);
      Expression();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void StatementAux2() throws ParseException {/*@bgen(jjtree) StatementAux2 */
                      ASTStatementAux2 jjtn000 = new ASTStatementAux2(JJTSTATEMENTAUX2);
                      boolean jjtc000 = true;
                      jjtree.openNodeScope(jjtn000);Token t, z;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EQUAL:{
        StatementAux1();
        jj_consume_token(SEMICOLON);
        break;
        }
      case DOT:{
        t = jj_consume_token(DOT);
jjtn000.setOperation(t.image);
        ExpressionAuxDot();
        jj_consume_token(SEMICOLON);
        break;
        }
      case IDENTIFIER:{
        t = jj_consume_token(IDENTIFIER);
jjtn000.setName(t.image);
        jj_consume_token(SEMICOLON);
        break;
        }
      case OPENSQBRACK:{
        t = jj_consume_token(OPENSQBRACK);
jjtn000.setOperation(t.image);
        Expression();
        jj_consume_token(CLOSESQBRACK);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case EQUAL:{
          StatementAux1();
          break;
          }
        default:
          jj_la1[14] = jj_gen;
          ;
        }
        ExpressionAux();
        jj_consume_token(SEMICOLON);
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

// STATEMENT - END


